# Insurance-Claim-Assistant

./: .firebaserc  .gitignore  README.md  firestore.rules  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt  script.md  storage.rules  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vercel.json  vite.config.js  vite.config.ts
api/: index.py
app/: app.py  pricing.py  receipts.py
functions/: .runtimeconfig.json  package-lock.json  package.json
functions/src/: index.ts
image-detection/: detection.py  requirements.txt  test_endpoints.sh
src/: App.tsx  theme.ts
src/components/: DetectedObjectsModal.tsx  FileUpload.tsx  Icons.tsx  InventoryPDF.tsx  Layout.tsx  PanoramaCapture.tsx  ReceiptUpload.tsx  SimpleFileUpload.tsx  SortableHandle.tsx  SortableItem.tsx
src/components/shared/: UIComponents.tsx
src/config/: firebase.ts
src/contexts/: AuthContext.tsx  PreferencesContext.tsx
src/hooks/: useCommon.ts  useLocalization.ts
src/i18n/: translations.ts
src/pages/: Auth.tsx  Collaborate.tsx  Documents.tsx  Home.tsx  Inventory.tsx  Profile.tsx  Setup.tsx
src/pages/api/: analyze-price.ts  detect-objects.ts
src/pages/join/: index.tsx  reject.tsx
src/providers/: AuthProvider.tsx
src/services/: apiService.ts  database.ts  firebase.ts  googleVisionAI.ts  imageProcessing.ts  imageService.ts  loggingService.ts  objectDetection.ts  receiptService.ts  storage.ts
src/types/: inventory.ts  models.ts
