[project]
name = "recoverly"
version = "0.1.0"
# description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.1.0",
    "flask_cors",
    "requests",
    "numpy",
    "openai",
    "opencv-python-headless",
    "python-dotenv",
    "groq>=0.18.0",
]
